despliegue/desarrollo/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: library-schema
  name: library-schema
  namespace: danosmasivos
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: library-schema
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: library-schema
    spec:
      containers:
        - env:
          image: imagekeyword
          imagePullPolicy: Always
          name: library-schema
          ports:
            - containerPort: 8080
              name: 80tcp01
              protocol: TCP
          resources:
            limits:
              cpu: "200m"
              memory: "512Mi"
            requests:
              memory: "100Mi"
              cpu: "10m"
          readinessProbe:
            httpGet:
              path: "/actuator/health"
              port: 8080
              scheme: "HTTP"
            failureThreshold: 20
            initialDelaySeconds: 400
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          livenessProbe:
            httpGet:
              path: "/actuator/health"
              port: 8080
              scheme: "HTTP"
            failureThreshold: 20
            initialDelaySeconds: 400
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          securityContext:
            allowPrivilegeEscalation: false
            capabilities: {}
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: false
          stdin: true
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          tty: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: service-library-schema
spec:
  ports:
    - protocol: TCP
      port: 8080
      name: 8080tcp01
      targetPort: 8080
  type: ExternalName
  sessionAffinity: None
  externalName: library-schema.danosmasivos.svc.cluster.local
